updated products tables

--- a/app/views/cosmetics-search-designs/search-page-01-error.html
+++ b/app/views/cosmetics-search-designs/search-page-01-error.html
@@ -221,7 +221,7 @@
                 </button>
 
                 <button type="reset" class="govuk-button opss-button-link" data-module="govuk-button">
-                    Clear filters
+                    Reset form
                 </button>
             </div>
 
