--- a/app/views/cosmetics-search-designs/search-page-01.html
+++ b/app/views/cosmetics-search-designs/search-page-01.html
@@ -197,7 +197,7 @@
                 </button>
 
                 <button type="reset" class="govuk-button opss-button-link opss-nojs-hide" id="opss-reset" data-module="govuk-button">
-                    Clear filters
+                    Reset form
                 </button>
             </div>
 
