--- a/app/views/create-cases-add-products/cases-page.html
+++ b/app/views/create-cases-add-products/cases-page.html
@@ -90,7 +90,7 @@
                 </button>
 
                 <button type="reset" class="govuk-button opss-button-link opss-nojs-hide govuk-!-font-size-16" id="opss-reset" data-module="govuk-button">
-                    Clear filters
+                    Reset form
                 </button>
             </div>
 
@@ -103,7 +103,7 @@
 
                 <table id="table-items" class="govuk-table opss-table-items">
                     <caption class="govuk-visually-hidden">
-                        Cases data: The table features three columns and each product is described across corresponding rows within one table body.
+                        Cases data: The table features three columns and each case is described across corresponding rows within each table body.
                     </caption>
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
