--- a/app/views/create-cases-add-products/products-page-new-product.html
+++ b/app/views/create-cases-add-products/products-page-new-product.html
@@ -209,7 +209,7 @@
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full" role="region" aria-label="Product lists">
 
-                <table id="table-items" class="govuk-table opss-table-items opss-table-items--new-item">
+                <table id="table-items" class="govuk-table opss-table-items xyz">
                     <caption class="govuk-visually-hidden">
                         Products data: The table features three columns and each product is described across corresponding rows within each table body.
                     </caption>
