fix for pagination

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -46,7 +46,7 @@
       <h3 class="govuk-heading-m">Add product - flow</h3>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/add-product-v4/start.html"><b>Start flow</b>: Add Product v4.1 designs (updating v3)</a>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/add-product-v4/start.html" target="_blank"><b>Start flow v1</b>: Add Product v4.1 designs (updating v3)</a></li>
 
           <!--ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
@@ -56,6 +56,7 @@
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-old.html">Select a product (old)</a></li>
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-links.html">Select a product (as links)</a></li>
           </ul-->
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/start" target="_blank"><b>Start flow v2</b>: Alternative user flow</a>
 
             <ul class="govuk-list govuk-list--bullet">
               <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/cases-page.html" target="_blank">Cases page</a>
