--- a/app/views/create-cases-add-products/find-the-product.html
+++ b/app/views/create-cases-add-products/find-the-product.html
@@ -37,15 +37,15 @@
   items: [
     {
       value: "yes",
-      text: "Yes",
+      text: "Yes - go to the products page",
       hint: {
         classes: "govuk-!-font-size-16 govuk-!-margin-bottom-4",
-        text: "The product may already exist within our records. On the products page you can search for it or add a new product. You can then create a case directly from the product."
+        html: 'The product may already exist within our records. On the products page you can search for it or add a new product. You can then <span class="govuk-!-font-weight-bold">create a case</span> directly from the product.'
       }
     },
     {
       value: "no",
-      text: "No",
+      text: "No - create a case",
       hint: {
         classes: "govuk-!-font-size-16",
         text: "The case might not relate to a product or the product details aren't available yet. You can add a product to a case later from the cases page."
