--- a/app/views/create-cases-add-products/products-page-new-product.html
+++ b/app/views/create-cases-add-products/products-page-new-product.html
@@ -197,7 +197,7 @@
                 </button>
 
                 <button type="reset" class="govuk-button opss-button-link opss-nojs-hide govuk-!-font-size-16" id="opss-reset" data-module="govuk-button">
-                    Reset filters
+                    Reset form
                 </button>
             </div>
 
