--- a/app/views/create-cases-add-products/start.html
+++ b/app/views/create-cases-add-products/start.html
@@ -25,12 +25,10 @@
         Create cases from the products page
       </h1>
 
-
-
       <p class="govuk-body">The Alternative v2 design flow: </p>
 
       <a href="cases-page.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
-        Start &nbsp;<span style="font-weight: normal;"></span>
+        Start &nbsp;<span style="font-weight: normal;"> alt v2 flow</span>
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
         </svg>
@@ -39,9 +37,29 @@
       <p class="govuk-body-l">For the error messages to work reliably, you may occasionally have to use the 'Clear data' option (in the footer).</p>
 
       <ol class="govuk-list govuk-list--number">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="cases-page.html">Cases page: choose to Create a case</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="find-the-product">Find the product link page: different versions for different audience</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="find-the-product-2">Find the product link page: v2 content WIP</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="cases-page.html">Cases page: select 'Create a case'</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="find-the-product">Find the product - link page: different versions for different audience</a>
+
+            <ol class="govuk-list govuk-list--number">
+              <li>No: <a class="govuk-link govuk-link--no-visited-state" href="is-this-case-related-to-covid">Is the case related to covid</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="reason-for-creating-case">Reason for creating the case</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="why-is-the-product-of-concern">Why is the product of concern</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="is-case-counterfeit">Is case related to a counterfiet product</a></li>
+              <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected-std">How many affected - continues flow...</a></li>
+            </ol>
+
+        </li>
+
+        <li><a class="govuk-link govuk-link--no-visited-state strike" href="find-the-product-2">Find the product link page: v2 content WIP *****</a></li>
+
+        <li><a class="govuk-link govuk-link--no-visited-state" href="find-the-product">Find the product - link page</a>
+
+            <ol class="govuk-list govuk-list--number">
+              <li>Yes: <a class="govuk-link govuk-link--no-visited-state" href="products-page">Products page</a></li>
+
+            </ol>
+
+        </li>
 
 
       </ol>
