--- a/app/views/create-cases-add-products/products-page-new.html
+++ b/app/views/create-cases-add-products/products-page-new.html
@@ -49,7 +49,7 @@
         </details>
     </div>
     <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
-        <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+        <a href="/create-cases-add-products/does-the-product-have-a-brand" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
             Add a product
         </a>
     </div>
