--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -158,37 +158,14 @@ ul.opss-radio-list {
     tbody.opss-bg th, tbody.opss-bg td {
         background-color: govuk-colour("light-grey");
     }
-    /*tbody:nth-child(odd) th, tbody:nth-child(odd) td {
-      background-color: govuk-colour("light-grey");
-    }*/
 
-    &.opss-table-items--new-item {/* the new product having been added - top tbody */
-        tbody:first-of-type {
-            border-top: 3px solid $govuk-success-colour;
-            border-bottom: 3px solid $govuk-success-colour;
-
-            tr:first-child {
-                th {
-                    color: $govuk-success-colour;
-                    /*padding-left: govuk-spacing(2);*/
-                    padding-top: govuk-spacing(3);
-                }
-            }
-            /*tr:first-child + tr {th + th {padding-left: govuk-spacing(2); } }
-            tr {
-                td:first-of-type {padding-left: govuk-spacing(2); }
-                td:last-of-type {padding-right: govuk-spacing(2); }
-            }
-            & + tbody th {padding-top: govuk-spacing(4); }*/
-        }
-    }
-    &.xyz {
+    &.opss-table-items--new,
+    &.opss-table-items--found {
         tbody:first-of-type {
             background-color: govuk-colour("light-grey");
 
             tr:first-child {
                 th {
-                    color: $govuk-success-colour;
                     padding-left: govuk-spacing(2);
                     padding-top: govuk-spacing(3);
                 }
@@ -201,6 +178,8 @@ ul.opss-radio-list {
             & + tbody th {padding-top: govuk-spacing(4); }
         }
     }
+    &.opss-table-items--new tbody:first-of-type tr:first-child th {color: $govuk-success-colour; }
+    &.opss-table-items--found tbody:first-of-type tr:first-child th {color: govuk-colour("dark-blue"); }
 
 }
 
