--- a/app/views/create-cases-add-products/how-many-units-are-affected-std.html
+++ b/app/views/create-cases-add-products/how-many-units-are-affected-std.html
@@ -14,11 +14,15 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
 
       <h1 class="govuk-heading-l">How many units are affected?</h1>
 
-      <p class="govuk-body-m">Continue the user flow ...</p>
+      <p class="govuk-body-m" style="margin-top: 60px;">The user continues with the current user flow for creating a case ...</p>
+
+      <p class="govuk-body-l">On completion of the create case flow, the user lands on the <br><a href="cases-page-success" class="govuk-link govuk-link--no-visited-state">cases page - showing a success banner</a>.</p>
+
+
 
     </div>
   </div>
