index landing page updates

--- a/app/views/create-cases-add-products/start.html
+++ b/app/views/create-cases-add-products/start.html
@@ -37,103 +37,24 @@
       <p class="govuk-body-l">For the error messages to work reliably, you may occasionally have to use the 'Clear data' option (in the footer).</p>
 
       <ol class="govuk-list govuk-list--number">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="cases-page.html">Cases page: select 'Create a case'</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="find-the-product">Find the product - link page: different versions for different audience</a>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="cases-page.html" target="_blank">Cases page</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="find-the-product" target="_blank">Find the product - link page: different versions for different audience</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state strike" href="find-the-product-v2" target="_blank">Find the product - link page: - v2</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="cases-page-success" target="_blank">Cases page: success, case added</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="products-page" target="_blank">Products page</a>
 
-            <ol class="govuk-list govuk-list--number">
-              <li>No: <a class="govuk-link govuk-link--no-visited-state" href="is-this-case-related-to-covid">Is the case related to covid</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="reason-for-creating-case">Reason for creating the case</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="why-is-the-product-of-concern">Why is the product of concern</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="is-case-counterfeit">Is case related to a counterfiet product</a></li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected-std">How many affected - continues flow...</a></li>
-            </ol>
-
-        </li>
-
-        <li><a class="govuk-link govuk-link--no-visited-state strike" href="find-the-product-2">Find the product link page: v2 content WIP *****</a></li>
-
-        <li><a class="govuk-link govuk-link--no-visited-state" href="find-the-product">Find the product - link page</a>
-
-            <ol class="govuk-list govuk-list--number">
-              <li>Yes: <a class="govuk-link govuk-link--no-visited-state" href="products-page">Products page</a></li>
-
-            </ol>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-results.html" target="_blank">Products page - after search</a></li>
+                </ul>
 
         </li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="products-page-we-found-it" target="_blank">Products page: found the product</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="products-page-new-product" target="_blank">Products page: success, product added</a></li>
 
-
-      </ol>
-
-
-
-      <hr>
-
-      <ol class="govuk-list govuk-list--number">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="is-this-case-related-to-covid.html">is-this-case-related-to-covid</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="reason-for-creating-case.html">reason-for-creating-case</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="why-is-the-product-of-concern.html">why-is-the-product-of-concern</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="is-case-counterfeit.html">is-case-counterfeit</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="do-you-have-the-barcode.html">do-you-have-the-barcode</a>
-          <ul>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product-barcode.html">select-a-product-barcode</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product-barcode-pg2.html">select-a-product-barcode page 2</a></li>
-          </ul>
-        </li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="search-for-an-existing-product.html">search-for-an-existing-product</a>
-          <ul>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product.html">select-a-product</a></li>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product-pg2.html">select-a-product page 2</a></li>
-          </ul>
-        </li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="does-the-product-have-a-brand.html">does-the-product-have-a-brand</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="what-is-the-product-name.html">what-is-the-product-name</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="what-is-the-product-category.html">what-is-the-product-category</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="does-the-product-have-marking.html">does-the-product-have-marking</a>
-          <ul>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="might-already-exist.html">might-already-exist</a></li>
-          </ul>
-        </li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="describe-the-product.html">describe-the-product</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="when-was-the-product-placed.html">when-was-the-product-placed</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="can-you-provide-an-image.html">can-you-provide-an-image</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="upload-a-product-image.html">upload-a-product-image</a>
-          <ul>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="upload-a-product-image-success.html">upload-a-product-image-success</a></li>
-          </ul>
-        </li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected.html">how-many-units-are-affected</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected-std.html">how-many-units-are-affected-std</a></li>
-      </ol>
+     </ol>
 
     </div>
 
-    <div class="govuk-grid-column-one-third">
 
-      <!--aside class="app-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
-          Subsection
-        </h2>
-        <nav role="navigation" aria-labelledby="subsection-title">
-          <ul class="govuk-list govuk-!-font-size-16">
-            <li>
-              <a href="#">
-                Related link
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                Related link
-              </a>
-            </li>
-            <li>
-              <a href="#" class="govuk-!-font-weight-bold">
-                More <span class="govuk-visually-hidden">in Subsection</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </aside-->
-
-    </div>
   </div>
 {% endblock %}
