--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,10 +43,10 @@
         <li><a href="/case-owner-change-page/improve-case-owner-change-page-error">Improve case owner change page (HTML) errors</a></li>
       </ul>
 
-      <h3 class="govuk-heading-m">Add product - flow</h3>
+      <h3 class="govuk-heading-m">Create case / Add product - users flow</h3>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/add-product-v4/start.html" target="_blank"><b>Start flow v1</b>: Add Product v4.1 designs (updating v3)</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/add-product-v4/start.html" target="_blank">Start flow <b>v1</b></a>: Adding products/cases (combined)</li>
 
           <!--ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
@@ -56,25 +56,7 @@
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-old.html">Select a product (old)</a></li>
             <li><a class="govuk-link govuk-link--no-visited-state strike" href="/add-product-v4/select-a-product-links.html">Select a product (as links)</a></li>
           </ul-->
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/start" target="_blank"><b>Start flow v2</b>: Alternative user flow</a>
-
-            <ul class="govuk-list govuk-list--bullet">
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/cases-page.html" target="_blank">Cases page</a>
-                <ul>
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/find-the-product.html" target="_blank">Find the product link page</a></li>
-                </ul>
-
-              </li>
-              <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page.html" target="_blank">Products page</a>
-                <ul class="govuk-list govuk-list--bullet">
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-results.html" target="_blank">Products page - after search</a></li>
-                  <!--li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-new.html" target="_blank">Products page - new product</a></li-->
-                  <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/products-page-new-product.html" target="_blank">Products page - new product</a></li>
-                </ul>
-              </li>
-            </ul>
-
-          </li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/start" target="_blank">Start flow <b>v2</b></a>: Alternative user flow (seperated)</li>
 
       </ul>
 
