--- a/app/views/create-cases-add-products/can-you-provide-an-image.html
+++ b/app/views/create-cases-add-products/can-you-provide-an-image.html
@@ -24,7 +24,7 @@
     classes: "govuk-!-padding-top-3 govuk-!-padding-bottom-1",
     fieldset: {
         legend: {
-            html: "Can you provide an image of the product? <br><span style='color:darkred;'>New design WIP</span>",
+            html: "Can you provide an image of the product? ",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
         }
@@ -39,7 +39,7 @@
     },
     {
       value: "no",
-      text: "No"
+      text: "No - finish and add the product"
     }
   ]
 }) }}
