--- a/app/views/opss-nav-account.html
+++ b/app/views/opss-nav-account.html
@@ -1,7 +1,7 @@
 <div class="opss-std-row">
     <div class="govuk-width-container">
         <nav class="opss-minor-nav" aria-label="account">
-            <ul class="govuk-list govuk-!-margin-bottom-0 opss-list--inline">
+            <ul class="govuk-list govuk-!-margin-bottom-0 opss-list--inline opss-list--right">
                 <li class="govuk-!-font-size-16">Smith &amp; Co</li>
                 <li class="govuk-!-font-size-16"><a href="/my_account" class="govuk-link govuk-link--no-visited-state">Your account</a></li>
                 <li class="govuk-!-font-size-16"><a href="/sign-out" class="govuk-link govuk-link--no-visited-state" rel="nofollow">Sign out</a></li>
