--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -1,7 +1,7 @@
 //These are the opss PSD css styles: I recommend simply copy and pasting this entire code into your local opss-psd scss file.
 //And include - copy over - the imported files in the same directory (listed at the top of this file).
 //Don't edit your local copy as pasting this into it next/each time will overwrite your changes.
-//We can remove linting from this scss file - it won't run if there is a real problem anyway
+//We can remove linting from this scss file - it won't run if there is a real problem
 
 @import "opss/opss-shared";
 @import "opss/opss-search";
@@ -43,6 +43,62 @@ main.govuk-main-wrapper {
 
 .opss-borders--padding {
     padding: govuk-spacing(6) govuk-spacing(5) govuk-spacing(5) govuk-spacing(6);
+}
+
+.opss-panels {
+    margin-top: govuk-spacing(7);
+    margin-bottom: govuk-spacing(2);
+
+    .opss-panels__pair {
+
+        border: 2px solid $govuk-brand-colour; //govuk-colour("mid-grey", $legacy: "grey-2");
+        border-radius: 5px;
+        padding: govuk-spacing(6) govuk-spacing(5) govuk-spacing(8) govuk-spacing(6);
+        margin-left: govuk-spacing(0);
+        margin-right: govuk-spacing(0);
+        margin-bottom: govuk-spacing(6);
+
+        & > span {
+            text-align: center;
+            width: 100%;
+            margin-bottom: govuk-spacing(4);
+        }
+
+        h2 {
+            color: $govuk-brand-colour;
+            /*text-align: center;*/
+            width: 100%;
+        }
+
+        details div {
+            @include govuk-font($size: 16);
+        }
+
+    }
+}
+@include govuk-media-query($from: desktop) {
+    .opss-panels {
+        display: -webkit-flex; /* Safari */
+        display: flex;
+
+        .opss-panels__pair {
+            -webkit-flex: 1; /* Safari */
+            -ms-flex: 1; /* IE10 */
+            flex: 1;
+
+            padding-bottom: govuk-spacing(6);
+
+            &.opss-panels__pair--left {
+                margin-right: govuk-spacing(2);
+                margin-left: govuk-spacing(3);
+            }
+            &.opss-panels__pair--right {
+                margin-right: govuk-spacing(3);
+                margin-left: govuk-spacing(2);
+            }
+
+        }
+    }
 }
 
 .opss-details-img {
