updates to user journey and is this your product

--- a/app/views/create-cases-add-products/cases-page-success.html
+++ b/app/views/create-cases-add-products/cases-page-success.html
@@ -18,7 +18,7 @@
         <h3 class="govuk-notification-banner__heading">
             The case has been created
         </h3>
-        <p class="govuk-body">You can now <a href="#item-01" class="govuk-notification-banner__link">add a product to this case</a> when required.</p>
+        <p class="govuk-body">You can <a href="#item-01" class="govuk-notification-banner__link">add products to this case</a> when required.</p>
     </div>
 </div>
 
