--- a/app/views/create-cases-add-products/find-the-product-error.html
+++ b/app/views/create-cases-add-products/find-the-product-error.html
@@ -63,7 +63,7 @@
       text: "No - create a case",
       hint: {
         classes: "govuk-!-font-size-16",
-        text: "The case might not relate to a product or the product details aren't yet available. You can add a product to a case later from the cases page."
+        text: "The case might not relate to a product, or the product details aren't yet available. You can add a product to a case later from the cases page."
       }
     }
   ]
