--- a/app/views/create-cases-add-products/might-already-exist.html
+++ b/app/views/create-cases-add-products/might-already-exist.html
@@ -1,4 +1,4 @@
-{% extends "layout-01.html" %}
+{% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
     Is this your product
@@ -110,7 +110,7 @@
                 <fieldset class="govuk-fieldset" aria-describedby="isit-hint">
 
                     <legend class="govuk-visually-hidden">
-                            Do you want to cancel adding the new product?
+                            Do you want to stop adding a new product and go to the products page?
                     </legend>
 
                     <div class="govuk-radios govuk-!-padding-bottom-1" data-module="govuk-radios">
@@ -146,31 +146,3 @@
     </div>
   </div>
 {% endblock %}
-
-
-
-
-
-
-
-
-
-
-
-
-
-<hr>xxxxxxxxxxxxxxxxxxxxxxx
-<b>Is this your product?</b><br>
-It appears that the product you are adding might already exist in our records?<br><br>
-
-
-<hr>
-Product info: Title, all details and its description (and image).
-<hr>
-<br>
-
-Yes<br><br>
-
-No (I'll continue to add my product)<br><br>
-
-<a href="describe-the-product.html">Continue</a>
