--- a/app/views/create-cases-add-products/products-page-we-found-it.html
+++ b/app/views/create-cases-add-products/products-page-we-found-it.html
@@ -47,7 +47,7 @@
         </details>
     </div>
     <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
-        <a href="/create-cases-add-products/does-the-product-have-a-brand" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+        <a href="/create-cases-add-products/do-you-have-the-barcode" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
             Add a product
         </a>
     </div>
@@ -234,7 +234,7 @@
                                 Product
                             </th>
                             <th id="item-01" colspan="3" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Hair bleach – chemical hazard</a>
+                                <a href="#" class="govuk-link govuk-link--no-visited-state">Sony 3000 hair dryer (x3000rpm)</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
