--- a/app/views/create-cases-add-products/start.html
+++ b/app/views/create-cases-add-products/start.html
@@ -1,4 +1,4 @@
-{% extends "layout-01.html" %}
+{% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
   Start
@@ -34,7 +34,9 @@
         </svg>
       </a>
 
-      <p class="govuk-body-l">For the error messages to work reliably, you may occasionally have to use the 'Clear data' option (in the footer).</p>
+      <p class="govuk-body">When adding a product you can use barcode <b>6666667777777</b> when prompted (6x sixes &amp; 7x sevens) as a product with this barcode that already exists within the records.</p>
+
+      <p class="govuk-body-s">For the error messages to work reliably, you may occasionally have to use the 'Clear data' option (in the footer).</p>
 
       <ol class="govuk-list govuk-list--number">
         <li><a class="govuk-link govuk-link--no-visited-state" href="cases-page.html" target="_blank">Cases page</a></li>
