--- a/app/views/create-cases-add-products/add-a-product-to-a-case.html
+++ b/app/views/create-cases-add-products/add-a-product-to-a-case.html
@@ -24,6 +24,9 @@
         <p class="govuk-body">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quam distinctio vero harum animi consequuntur labore voluptatibus voluptates, provident voluptate eius aliquam id exercitationem! Quod fugiat laudantium blanditiis qui magnam.
         </p>
+        <p class="govuk-body">
+            The Allergation or Enquiry reference number is: <b>20-2120</b>. Find the product using <a href="#" class="govuk-link govuk-link--no-visited-state">the products page</a> and [choose add to case, where you can enter the reference number (we confirm if it is the correct case before saving).] (Copy to clip-board).
+        </p>
 
 
     </div>
