--- a/app/views/create-cases-add-products/does-the-product-have-a-brand-error.html
+++ b/app/views/create-cases-add-products/does-the-product-have-a-brand-error.html
@@ -1,4 +1,4 @@
-{% extends "layout-01.html" %}
+{% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
     Does the product have a brand
@@ -7,7 +7,7 @@
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "products-page"
+        href: "do-you-have-the-barcode"
     }) }}
 {% endblock %}
 
@@ -27,9 +27,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-
       <form action="#" method="post" novalidate>
-        <span class="govuk-caption-l">Add a product</span>
+
 
 {% set yesHtml %}
 {{ govukInput({
