--- a/app/views/create-cases-add-products/what-is-the-product-category-error-3.html
+++ b/app/views/create-cases-add-products/what-is-the-product-category-error-3.html
@@ -1,4 +1,4 @@
-{% extends "layout-01.html" %}
+{% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
     What is the product category and subcategory
